--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
+  "homepage": "https://awtw.github.io/burger_project",
   "name": "burger_project",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "babel-runtime": "^6.26.0",
+    "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.2.0"
